--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -4,9 +4,35 @@
     <meta charset="utf-8"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
     <title>首页-前台</title>
+    <link rel="stylesheet" href="../../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"></link>
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css"></link>
+    <script src="../../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
 
 </head>
 <body>
- 前台首页
+
+ <body class="layui-layout-body">
+ <div class="layui-layout layui-layout-admin" >
+     <div class="layui-header">
+         <div class="layui-logo">银行理财管理系统后台</div>
+
+         <ul class="layui-nav layui-layout-right">
+             <li class="layui-nav-item" th:unless="${session.user == null}" >
+                 <a href="#" th:text="${session.user.name}">
+                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img"></img>
+                     管理员
+                 </a>
+                 <dl class="layui-nav-child">
+                     <dd><a href="">基本资料</a></dd>
+                     <dd><a href="">安全设置</a></dd>
+                 </dl>
+             </li>
+             <li class="layui-nav-item"><a id="u_login" th:unless="${session.user != null}">
+                 <i class="layui-icon" style="font-size: 18px; color: #e2e2e2;">&#xe68e;</i>
+                 登录</a></li>
+
+             <li class="layui-nav-item"><a id="u_login_out" th:unless="${session.user == null}" th:href="@{/user/loginout}">退出</a></li>
+         </ul>
+     </div>
 </body>
 </html>
