--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,16 +36,16 @@
     <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll"  >
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-            <ul class="layui-nav layui-nav-tree"  lay-filter="test" >
+            <ul class="layui-nav layui-nav-tree"  lay-filter="test" lay-shrink="all">
                 <li class="layui-nav-item">
                    <!-- layui-nav-itemed-->
-                    <a  href="javascript:;" ><i class="layui-icon menu-icon">&#xe613;</i> 用户管理</a>
+                    <a  href="javascript:;"  ><i class="layui-icon menu-icon">&#xe612;</i> 用户管理</a>
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/user/list}" href="user/list.html" class="layui-col-md-offset2" target="target">客户列表</a></dd>
                     </dl>
 
                 </li>
-                <li class="layui-nav-item" >
+               <!-- <li class="layui-nav-item" >
                     <a href="javascript:;" ><i class="layui-icon menu-icon">&#xe612;</i> 管理员管理</a>
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 管理员列表</a></dd>
@@ -59,7 +59,7 @@
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 权限分类</a></dd>
                     </dl>
-                </li>
+                </li>-->
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon menu-icon">&#xe62d;</i>产品管理</a>
                     <dl class="layui-nav-child">
@@ -75,6 +75,18 @@
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon menu-icon">&#xe614;</i> 系统设置</a>
+                    <dl class="layui-nav-child">
+                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 管理员列表</a></dd>
+                    </dl>
+                    <dl class="layui-nav-child">
+                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 角色管理</a></dd>
+                    </dl>
+                    <dl class="layui-nav-child">
+                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 权限管理</a></dd>
+                    </dl>
+                    <dl class="layui-nav-child">
+                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 权限分类</a></dd>
+                    </dl>
                     <dl class="layui-nav-child">
                         <dd><a href="javascript:;" class="layui-col-md-offset2"> 日志管理</a></dd>
                     </dl>
