--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,23 +49,23 @@
                <!-- <li class="layui-nav-item" >
                     <a href="javascript:;" ><i class="layui-icon menu-icon">&#xe612;</i> 管理员管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 管理员列表</a></dd>
+                        <dd><a th:href="@{/admin/list}" href="admin/list-admin.html" class="layui-col-md-offset2" target="target"> 管理员列表</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 角色管理</a></dd>
+                        <dd><a th:href="@{/admin/list}" href="admin/list-admin.html" class="layui-col-md-offset2" target="target"> 角色管理</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 权限管理</a></dd>
+                        <dd><a th:href="@{/admin/list}" href="admin/list-admin.html" class="layui-col-md-offset2" target="target"> 权限管理</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 权限分类</a></dd>
+                        <dd><a th:href="@{/admin/list}" href="admin/list-admin.html" class="layui-col-md-offset2" target="target"> 权限分类</a></dd>
                     </dl>
                 </li>-->
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon menu-icon">&#xe62d;</i>产品管理</a>
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/project/list}" href="project/list.html" class="layui-col-md-offset2" target="target">理财项目</a></dd>
-                        <dd><a href="product/list.html" class="layui-col-md-offset2" target="target">理财产品</a></dd>
+                        <dd><a href="product/list-admin.html" class="layui-col-md-offset2" target="target">理财产品</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
