--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -9,7 +9,7 @@
     <script src="../../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
 
 </head>
-<body>
+
 
  <body class="layui-layout-body">
  <div class="layui-layout layui-layout-admin" >
@@ -34,5 +34,6 @@
              <li class="layui-nav-item"><a id="u_login_out" th:unless="${session.user == null}" th:href="@{/user/loginout}">退出</a></li>
          </ul>
      </div>
+ </div>
 </body>
 </html>
