--- a/src/main/resources/templates/product/edit.html
+++ b/src/main/resources/templates/product/edit.html
@@ -3,48 +3,51 @@
 <head>
     <meta charset="utf-8"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
-    <title>添加</title>
-    <link rel="stylesheet" href="../../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"></link>
+    <title>编辑</title>
+    <link rel="stylesheet" href="../../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}" ></link>
 </head>
 <body>
 <div class="layui-container layui-form-item " style="margin-top: 20px;margin-left: 20px;margin-right: 20px">
-    <form class="layui-form" action="#" th:action="@{/product/add}" th:object="${product}" method="post">
+    <form class="layui-form" action="#" th:action="@{/product/edit}" th:object="${product}" method="post">
+        <input type="hidden" name="id" th:value="${product.id}" th:field="*{id}"/>
+        <input type="hidden" name="productCode" th:value="${product.productCode}" th:field="*{productCode}"/>
         <div class="layui-form-item magt3">
             <label class="layui-form-label">名称</label>
             <div class="layui-input-inline">
-                <input name="name" lay-verify="required" type="text" class="layui-input" placeholder="请输入名称" th:field="*{name}"/>
+                <input type="text" class="layui-input" placeholder="请输入名称"  th:value="${product.name}" th:field="*{name}"/>
             </div>
         </div>
+
 
         <div class="layui-form-item magt3">
             <label class="layui-form-label">产品类型</label>
             <div class="layui-input-inline" style="width: 360px;">
-                <input type="radio" name="type" value="保本浮动" title="保本浮动" th:checked="${product.type}"/>
-                <input type="radio" name="type" value="不保本浮动"  title="不保本浮动"/>
+                <input type="radio" name="type" value="保本浮动" title="保本浮动" th:checked="${product.type=='保本浮动'}" />
+                <input type="radio" name="type" value="不保本浮动"  title="不保本浮动" th:checked="${product.type=='不保本浮动'}"/>
             </div>
         </div>
         <div class="layui-form-item magt3">
             <label class="layui-form-label">销售状态</label>
             <div class="layui-input-inline">
-                <input type="radio" name="status" value="在售" title="在售"  th:checked="${product.status}"/>
-                <input type="radio" name="status" value="即将发售"  title="即将发售"/>
+                <input type="radio" name="status" value="在售" title="在售"  th:checked="${product.status=='在售'}"/>
+                <input type="radio" name="status" value="即将发售"  title="即将发售" th:checked="${product.status=='即将发售'}"/>
             </div>
         </div>
         <div class="layui-form-item magt3">
             <label class="layui-form-label">币种</label>
             <div class="layui-input-inline">
-                <input type="radio" name="currency" value="人民币" title="人民币" th:checked="${product.currency}"/>
-                <input type="radio" name="currency" value="外币"  title="外币"/>
+                <input type="radio" name="currency" value="人民币" title="人民币" th:checked="${product.currency=='人民币'}"/>
+                <input type="radio" name="currency" value="外币"  title="外币" th:checked="${product.currency=='外币'}"/>
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">风险等级</label>
             <div class="layui-input-inline" style="width: 360px;">
-                <input type="radio" name="riskLevel" value="R1" title="R1" th:checked="${product.riskLevel}"/>
-                <input type="radio" name="riskLevel" value="R2"  title="R2"/>
-                <input type="radio" name="riskLevel" value="R3"  title="R3"/>
-                <input type="radio" name="riskLevel" value="R4"  title="R4"/>
-                <input type="radio" name="riskLevel" value="R5"  title="R5"/>
+                <input type="radio" name="riskLevel" value="R1" title="R1"  th:checked="${product.riskLevel=='R1'}"/>
+                <input type="radio" name="riskLevel" value="R2"  title="R2"  th:checked="${product.riskLevel=='R2'}"/>
+                <input type="radio" name="riskLevel" value="R3"  title="R3"  th:checked="${product.riskLevel=='R3'}"/>
+                <input type="radio" name="riskLevel" value="R4"  title="R4"  th:checked="${product.riskLevel=='R4'}"/>
+                <input type="radio" name="riskLevel" value="R5"  title="R5"  th:checked="${product.riskLevel=='R5'}"/>
 
             </div>
         </div>
@@ -52,7 +55,7 @@
             <label class="layui-form-label">收益率</label>
             <div class="layui-input-inline">
                 <input type="text" class="layui-input newsName" lay-verify="required" placeholder="请输入收益率(%)"
-                       th:field="*{returnRate}"/>
+                      th:value="${product.returnRate}" th:field="*{returnRate}"/>
             </div>
         </div>
 
@@ -60,7 +63,7 @@
             <label class="layui-form-label">起售时间</label>
             <div class="layui-input-inline"  >
                 <input class="layui-input laydate-icon" placeholder="起售时间" id="test1" type="text"
-                       th:field="*{start_sale_time}"/>
+                     th:value="${product.start_sale_time}"  th:field="*{start_sale_time}"/>
             </div>
         </div>
 
@@ -69,7 +72,7 @@
             <div class="layui-input-inline">
 
                 <input class="layui-input laydate-icon" placeholder="停售时间" id="test2" type="text"
-                       th:field="*{end_sale_time}"/>
+                       th:value="${product.end_sale_time}" th:field="*{end_sale_time}"/>
             </div>
         </div>
 
@@ -77,7 +80,7 @@
             <label class="layui-form-label">到期日期</label>
             <div class="layui-input-inline">
                 <input class="layui-input laydate-icon" placeholder="到期时间" id="test3" type="text"
-                th:field="*{ran_out_time}"/>
+                       th:value="${product.ran_out_time}" th:field="*{ran_out_time}"/>
             </div>
         </div>
 
@@ -85,30 +88,28 @@
             <label class="layui-form-label">产品描述</label>
             <div class="layui-input-inline">
                 <input type="text" class="layui-input newsName" lay-verify="required" placeholder="请输入产品描述"
-                       th:field="*{description}"/>
+                       th:value="${product.description}" th:field="*{description}"/>
             </div>
         </div>
+
 
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn" lay-submit="submit" lay-filter="formDemo">添加</button>
+                <button class="layui-btn" lay-submit="submit" lay-filter="formDemo">修改</button>
                 <button id="cancel" type="reset" class="layui-btn layui-btn-primary">取消</button>
             </div>
         </div>
-
     </form>
 </div>
 <script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 <script th:inline="javascript">
-    layui.use(['layer','form', 'element','laydate'], function () {
+    layui.use(['form', 'element','laydate'], function () {
         var form = layui.form
             , $ = layui.$
             , element = layui.element
-            , layer = layui.layer
-            ,$ = layui.jquery
             ,laydate = layui.laydate;
 
-
+        //日期控件
         laydate.render({
             elem: '#test1'
         });
@@ -121,53 +122,45 @@
             elem: '#test3'
         });
 
-
-        //数据校验
-        form.verify({
-
-        });
-
-
         //监听提交
         form.on('submit(formDemo)', function (data) {
             layer.msg(JSON.stringify(data.field));
             $.ajax({
                 type: 'POST',
-                url: /*[[@{/product/add}]]*/'',
-                dataType: 'json',
+                url: /*[[@{/product/edit}]]*/'',
+                dataType:'json',
                 data: data.field,
                 async: true,
                 success: function (result) {
                     console.log(result.code)
                     if (result.code == 0) {
-                        layer.msg('success:保存成功', {icon: 1, time: 1000});
-                        setTimeout(function () {
-                            parent.location.href = "/product/list-admin";
-                        }, 1000);
+                        layer.msg('success:保存成功', {icon: 1, time:1000});
+                        setTimeout(function(){
+
+                            parent.location.href="/product/list-admin";
+                        },800);
                     } else {
                         console.alert(result.code);
-                        layer.msg('error:保存失败！' + result.msg, {icon: 2, time: 1000});
+                        layer.msg('eles:保存失败！'+result.msg, {icon: 2, time:1000});
                         layer.close(index);
                     }
                 },
                 error: function (result, type) {
-                    layer.msg('error:保存失败！', {icon: 2, time: 1000});
+                    layer.msg('error:保存失败！', { icon: 2, time:1000 });
                 }
             });
             console.log(data.field)
             return false;
         });
+
         //取消按钮 关闭弹出层
         $('#cancel').on('click', function () {
             var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
             parent.layer.close(index); //再执行关闭
         });
-
     });
 
 
-
 </script>
-
 </body>
 </html>
