--- a/src/main/resources/templates/project/list.html
+++ b/src/main/resources/templates/project/list.html
@@ -49,7 +49,7 @@
                 {field: 'id', width: 80, title: 'ID', sort: true}
                 , {field: 'name', width: 130, title: '项目名称', sort: true}
                 , {field: 'description', width: 250, title: '项目描述'}
-                , {field: 'createAdminId', width: 120, title: '创建者'}
+                , {field: 'create_user_name', width: 120, title: '创建者'}
                 , {field: 'createTime', width: 180, title: '创建时间'}
                 , {title: '操作', width: 170, templet: '#barDemo', fixed: "right", align: "center"}
             ]]
