--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon menu-icon">&#xe60e;</i> 交易管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" class="layui-col-md-offset2"> 查询交易信息</a></dd>
+                        <dd><a th:href="@{/trade/list}" href="project/trade.html" class="layui-col-md-offset2" target="target"> 查询交易信息</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
