--- a/src/main/resources/templates/test/xiaochengxu.html
+++ b/src/main/resources/templates/test/xiaochengxu.html
@@ -157,8 +157,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon01"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -169,8 +169,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon02"></i></div>
                             <h3>新餐饮</h3>
                             <p>
-                                订座 堂吃点餐 外卖<br>
-                                餐饮行业前厅后厨外卖<br>
+                                订座 堂吃点餐 外卖<br/>
+                                餐饮行业前厅后厨外卖<br/>
                                 一体化解决方案
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -181,8 +181,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon03"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -193,8 +193,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon04"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -205,8 +205,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon05"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -217,8 +217,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon06"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -230,8 +230,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon07"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -242,8 +242,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon08"></i></div>
                             <h3>新餐饮</h3>
                             <p>
-                                订座 堂吃点餐 外卖<br>
-                                餐饮行业前厅后厨外卖<br>
+                                订座 堂吃点餐 外卖<br/>
+                                餐饮行业前厅后厨外卖<br/>
                                 一体化解决方案
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -254,8 +254,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon09"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -266,8 +266,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon10"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -278,8 +278,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon11"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
@@ -290,8 +290,8 @@
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon12"></i></div>
                             <h3>新零售</h3>
                             <p>
-                                商城、营销、会员<br>
-                                门店全方位管理<br>
+                                商城、营销、会员<br/>
+                                门店全方位管理<br/>
                                 助力新零售转型升级
                             </p>
                             <i class="t-con-new-item-btn">了解更多</i>
