--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -37,8 +37,8 @@
     <a class="layui-btn layui-btn-xs" lay-event="edit" id="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
-<script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
-<script src="../static/js/user/list.js" th:src="@{/js/user/list.js}"></script>
+<script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+<script src="../../static/js/user/list.js" th:src="@{/js/user/list.js}"></script>
 
 
 <table class="layui-table" id="test1" lay-filter="demo"></table>
