--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -5,12 +5,12 @@
     <title>理财产品</title>
     <link rel="stylesheet" href="../../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"></link>
     <link rel="stylesheet" href="../../static/css/index/page.css" th:href="@{/css/index/page.css}"></link>
-    <link href="../../static/css/index/global.css" rel="stylesheet"></link>
+    <link href="../../static/css/index/global.css" th:href="@{/css/index/global.css}" rel="stylesheet"></link>
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css" th:href="@{http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css}"></link>
     <script src="../../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
 
-    <script src="../../static/layui/layui.js"></script>
-    <script src="../../static/js/vue.js"></script>
+    <script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+    <script src="../../static/js/vue.js" th:src="@{/js/vue.js}"></script>
 </head>
 
 <body>
@@ -20,11 +20,7 @@
 
 
     <div class="breadcrumb_item">
-        <!--<span>当前位置：</span>
-        <span class="layui-breadcrumb">
-			  	<a href="/index.html">首页</a>
-			  	<a href="/sysmi.html">平台域名</a>
-			</span>-->
+
     </div>
     <div class="condition_box">
         <form class="layui-form" id="sysMiCondForm">
@@ -102,36 +98,38 @@
 </div>
 <div class="header layui-bg-cyan">
     <input type="hidden" id="controller" value="Index" />
-    <div class="layui-header" v-cloak>
+    <div class="layui-header"  >
         <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="../../">银行理财平台</a></li>
-            <li class="layui-nav-item layui-this" id="Index"><a href="../../">首页</a></li>
+            <li class="layui-nav-item"><a href="#">银行理财平台</a></li>
+            <li class="layui-nav-item" ><a href="#" th:href="@{/index/home}">首页</a></li>
 
-            <li class="layui-nav-item" id="Agents"><a href="#">理财产品</a></li>
+            <li class="layui-nav-item layui-this" id="Agents"><a href="#">理财产品</a></li>
             <li class="layui-nav-item" id="News"><a href="#">理财资讯</a></li>
             <li class="layui-nav-item" id="Abount"><a href="#">关于我们</a></li>
 
 
         </ul>
 
-        <ul class="layui-nav layui-right" v-if="User.Id==0">
+        <ul class="layui-nav layui-right" th:unless="${session.user != null}">
             <li class="layui-nav-item">
                 <a  href="#">登录</a>
             </li>
             <li class="layui-nav-item"><a href="http://sso.softseeks.cn/Reg">注册</a></li>
         </ul>
-        <ul class="layui-nav layui-right" v-else>
+        <ul class="layui-nav layui-right" th:unless="${session.user == null}">
             <li class="layui-nav-item">
-                <a href="http://ruanyun.verdor.softseeks.cn">{{User.Name}}</a>
+                <a href="http://ruanyun.verdor.softseeks.cn" th:text="${session.user.name}"></a>
             </li>
-            <li class="layui-nav-item"><a href="/Index/Logout">退出</a></li>
+            <li class="layui-nav-item"><a href="#" id="logout" th:href="@{/user/loginout1}">退出</a></li>
             <li class="layui-nav-item">
                 <a href="">个人中心<span class="layui-badge-dot"></span></a>
             </li>
         </ul>
     </div>
-
 </div>
+
+
+
 </body>
 <script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 <script type="text/javascript" th:inline="javascript">
@@ -148,7 +146,7 @@
             ,layout: ['count', 'prev', 'page', 'next', 'limit']
             ,jump: function(obj, first){
                 if(!first){
-                    table_options.url="/getSysmi?"+$('#sysMiCondForm').serialize()+"&page="+obj.curr+"&pageSize="+obj.limit;
+                    table_options.url="/getSysmi?"+$('#sysMiCondForm').serialize()+"&amp;page="+obj.curr+"&amp;pageSize="+obj.limit;
                     tableIns.reload(table_options);
                 }
             }
@@ -191,7 +189,7 @@
             $("#sysMiForm").attr("action",suffix=="buy"?"/toBuy":"/download");
             if(suffix.indexOf("all")!=0){
                 var checkStatus = table.checkStatus("sysMiTable");
-                if(checkStatus.data.length<1){
+                    if( checkStatus.data.length <![CDATA['<']]>1 ){
                     layer.msg("至少选择一行", {icon:5,anim:6});
                     return false;
                 }
