--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -94,8 +94,8 @@
 
     <div class="wrap s-bg-gy">
         <dl class="g-box m-dl">
-            <dt class="m-dt-t1">国内领先、免费、最全的小程序产品</dt>
-            <dt class="m-dt-t2 g-mb64">软云小程序、电商小程序、服务小程序、O2O小程序，助您畅享小程序流量红利
+            <dt class="m-dt-t1">让您的资产稳定增长</dt>
+            <dt class="m-dt-t2 g-mb64">放心理财，优质服务，低风险投入，收益百分百
 
             </dt>
 
@@ -145,8 +145,8 @@
 
     <div style="background-color: #ffffff; overflow: hidden;">
         <div class="t-box1 wrap">
-            <h1 class="font28 grey333 f-tac">小程序解决方案</h1>
-            <p class="f-tac f-db font16 grey666">无需安装，一键拥有，触手可及，集展示、互动、交易为一体</p>
+            <h1 class="font28 grey333 f-tac">让您的资产稳定增长</h1>
+            <p class="f-tac f-db font16 grey666">科学理财、轻松赢利、快捷办理、收益稳定</p>
             <div class="t-con-new f-cb">
                 <ul>
                     <li>
@@ -303,7 +303,7 @@
 
 
     <div style="padding-bottom: 65px;">
-        <p class="g-title">小程序核心场景</p>
+        <p class="g-title">一站式金融生活平台</p>
         <div class="app-scene">
             <span>
                 <img src="http://cdn.jisuapp.cn/zhichi_frontend/static/webapp_home/img/find-app.svg" alt=""
