--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -6,24 +6,28 @@
     <link rel="stylesheet" href="../../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"></link>
     <link rel="stylesheet" href="../../static/css/index/page.css" th:href="@{/css/index/page.css}"></link>
     <link href="../../static/css/index/global.css" th:href="@{/css/index/global.css}" rel="stylesheet"></link>
-    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css" th:href="@{http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css}"></link>
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css"
+          th:href="@{http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css}"></link>
     <script src="../../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
-
     <script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
     <script src="../../static/js/vue.js" th:src="@{/js/vue.js}"></script>
+    <style type="text/css">
+        .layui-table-cell {
+            height: 36px;
+            line-height: 36px;
+        }
+    </style>
 </head>
 
 <body>
 
 
 <div class="content_box">
-
-
     <div class="breadcrumb_item">
 
     </div>
     <div class="condition_box">
-        <form class="layui-form" id="sysMiCondForm">
+        <form class="layui-form" id="sysMiCondForm" th:action="@{/product/list}" th:object="${product}" method="post">
             <div class="layui-form-item">
 
                 <div class="layui-inline">
@@ -31,13 +35,13 @@
                     <div class="layui-input-inline" style="width: 90px;">
                         <select name="term">
                             <option value="0">全部</option>
-                            <option value="1">0-7天</option>
-                            <option value="2">8-14天</option>
-                            <option value="3">15-30天</option>
-                            <option value="4">31-90天</option>
-                            <option value="5">91-181天</option>
-                            <option value="6">181-365天</option>
-                            <option value="7">365天以上</option>
+                            <option value="1" th:selected="${product.term == '1'}">0-7天</option>
+                            <option value="2" th:selected="${product.term == '2'}">8-14天</option>
+                            <option value="3" th:selected="${product.term == '3'}">15-30天</option>
+                            <option value="4" th:selected="${product.term == '4'}">31-90天</option>
+                            <option value="5" th:selected="${product.term == '5'}">91-181天</option>
+                            <option value="6" th:selected="${product.term == '6'}">181-365天</option>
+                            <option value="7" th:selected="${product.term == '7'}">365天以上</option>
                         </select>
                     </div>
                 </div>
@@ -47,8 +51,8 @@
                     <div class="layui-input-inline">
                         <select name="type">
                             <option value="0">全部</option>
-                            <option value="1">保本</option>
-                            <option value="2">非保本</option>
+                            <option value="1" th:selected="${product.type == '1'}">保本</option>
+                            <option value="2" th:selected="${product.type == '2'}">非保本</option>
                         </select>
                     </div>
                 </div>
@@ -56,25 +60,25 @@
                 <div class="layui-inline">
                     <label class="layui-form-label" style="width: 75px;">风险：</label>
                     <div class="layui-input-inline">
-                        <select lay-search="" name="suffix">
+                        <select lay-search="" name="riskLevel">
                             <!--谨慎型产品(R1)、稳健型产品(R2)、平衡型产品(R3)、进取型产品(R4)、激进型产品(R5)-->
                             <option value="0">全部</option>
-                            <option value="R1">谨慎型产品</option>
-                            <option value="R2">稳健型产品</option>
-                            <option value="R3">平衡型产品</option>
-                            <option value="R4">进取型产品</option>
-                            <option value="R5">激进型产品</option>
+                            <option value="R1" th:selected="${product.riskLevel == 'R1'}">谨慎型产品</option>
+                            <option value="R2" th:selected="${product.riskLevel == 'R2'}">稳健型产品</option>
+                            <option value="R3" th:selected="${product.riskLevel == 'R3'}">平衡型产品</option>
+                            <option value="R4" th:selected="${product.riskLevel == 'R4'}">进取型产品</option>
+                            <option value="R5" th:selected="${product.riskLevel == 'R5'}">激进型产品</option>
                         </select>
                     </div>
                 </div>
                 <div class="layui-inline">
                     <label class="layui-form-label" style="width: 75px;">状态：</label>
                     <div class="layui-input-inline">
-                        <select name="jieGou">
+                        <select name="status">
                             <option value="0">全部</option>
-                            <option value="1">在售</option>
-                            <option value="2">待售</option>
-                            <option value="3">已售完</option>
+                            <option value="1" th:selected="${product.status == '1'}">在售</option>
+                            <option value="2" th:selected="${product.status == '2'}">待售</option>
+                            <option value="3" th:selected="${product.status == '3'}">已售完</option>
                         </select>
                     </div>
                 </div>
@@ -82,37 +86,37 @@
                 <div class="layui-inline">
                     <label class="layui-form-label" style="width: 75px;">产品名称：</label>
                     <div class="layui-input-inline" style="width: 140px;">
-                        <input autocomplete="off" class="layui-input" name="mis" placeholder="请输入产品名称" type="text" />
+                        <input autocomplete="off" class="layui-input" name="name"
+                               placeholder="请输入产品名称" type="text"  th:field="*{name}"/>
                     </div>
                 </div>
 
             </div>
 
             <div class="layui-form-item tc">
-                <input class="layui-btn layui-btn-primary" type="reset" value="重置" />
-                <input class="layui-btn yellow_btn" lay-filter="sysMiCondBtn" lay-submit="" type="button" value="搜索" />
+                <input class="layui-btn layui-btn-primary" type="reset" value="重置"/>
+                <input class="layui-btn yellow_btn" lay-filter="search" lay-submit="submit" type="button" value="搜索"/>
             </div>
         </form>
     </div>
 
+    <table class="layui-hide" id="product-list"></table>
+
 </div>
 <div class="header layui-bg-cyan">
-    <input type="hidden" id="controller" value="Index" />
-    <div class="layui-header"  >
+    <input type="hidden" id="controller" value="Index"/>
+    <div class="layui-header">
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="#">银行理财平台</a></li>
-            <li class="layui-nav-item" ><a href="#" th:href="@{/index/home}">首页</a></li>
-
+            <li class="layui-nav-item"><a href="#" th:href="@{/index/home}">首页</a></li>
             <li class="layui-nav-item layui-this" id="Agents"><a href="#">理财产品</a></li>
             <li class="layui-nav-item" id="News"><a href="#">理财资讯</a></li>
             <li class="layui-nav-item" id="Abount"><a href="#">关于我们</a></li>
-
-
         </ul>
 
         <ul class="layui-nav layui-right" th:unless="${session.user != null}">
             <li class="layui-nav-item">
-                <a  href="#">登录</a>
+                <a href="#">登录</a>
             </li>
             <li class="layui-nav-item"><a href="http://sso.softseeks.cn/Reg">注册</a></li>
         </ul>
@@ -128,80 +132,78 @@
     </div>
 </div>
 
-
-
 </body>
+<script type="text/html" id="barDemo">
+
+    <a href="#" th:href="@{product/buy}"><i class="layui-icon" style="font-size: 30px; color: #FF5722;">&#xe698;</i></a>
+
+</script>
 <script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
 <script type="text/javascript" th:inline="javascript">
-    layui.use(['form', 'laypage', 'table', 'layer'], function(){
-        var form = layui.form, laypage=layui.laypage, layer=layui.layer, table=layui.table;
-        form.render('select');
-        var page_options={
-            elem: 'sysMiPage'
-            ,first: '首页'
-            ,last: '尾页'
-            ,groups: 5
-            ,theme: '#ff6700'
-            ,limits: [20,50,100,200]
-            ,layout: ['count', 'prev', 'page', 'next', 'limit']
-            ,jump: function(obj, first){
-                if(!first){
-                    table_options.url="/getSysmi?"+$('#sysMiCondForm').serialize()+"&amp;page="+obj.curr+"&amp;pageSize="+obj.limit;
-                    tableIns.reload(table_options);
-                }
+    layui.use(['form', 'table'], function () {
+        var table = layui.table
+            , form = layui.form;
+
+        table.render({
+            elem: '#product-list'
+            , url: '/product/list1'
+            , page: {
+                layout: ['limit', 'count', 'prev', 'page', 'next', 'skip']
+                //,curr: 5 //设定初始在第 5 页
+                , groups: 1 //只显示 1 个连续页码
+                , first: false //不显示首页
+                , last: false //不显示尾页
+
             }
-        };
-        var table_options={
-            elem: '#sysMiTable'
-            ,id: 'sysMiTable'
-            ,url: '/getSysmi'
-            ,method: 'get'
-            ,page: false
-            ,cols: [[ //标题栏
-                {field: 'id', checkbox: true, LAY_CHECKED: false}
-                ,{field: 'mi', title: '域名', width: 161, toolbar: '#detailBar'}
-                ,{field: 'outMoney', title: '价格', width: 60}
-                ,{field: 'strBaType', title: '性质', width: 60}
-                ,{field: 'baNumber', title: '建站编号', width: 180}
-                ,{field: 'baName', title: '建站记录', width: 265}
-                ,{field: 'startDate', title: '注册时间', width: 105, align:'center'}
-                ,{field: 'endDate', title: '到期时间', width: 105, align:'center'}
-                ,{title: '微信-360-管家', width:125, align:'center', toolbar: '#checkBar'}
-                ,{fixed: 'right', title: '购买', width:80, align:'center', toolbar: '#buyBar'}
+            /*,height:475*/
+            ,skin:'line'
+            ,even:true
+            , cols: [[
+                  {field: 'id', width: 80, title: 'ID', sort: true}
+                , {field: 'productCode', width: 166, title: '产品编码'}
+                , {field: 'name', width: 150, title: '名称'}
+                , {field: 'type', width: 120, title: '类型', sort: true}
+                , {field: 'status', width: 130, title: '状态'}
+                , {field: 'riskLevel', width: 90, title: '风险等级'}
+                , {field: 'returnRate', width: 124, title: '收益率(%)',sort: true}
+                , {field: 'term', width: 130, title: '投资期限',sort: true}
+                , {field: 'ran_out_time', width: 120, title: '到期时间'}
+                , {title: '操作', width: 87, templet: '#barDemo', fixed: "right", align: "left"}
             ]]
-            ,done: function(res){
-                page_options.curr=res.page;
-                page_options.count=res.count;
-                page_options.limit=res.pageSize;
-                laypage.render(page_options);
-            }
-        };
-
-        var tableIns = table.render(table_options);
-
-        form.on("submit(sysMiCondBtn)", function(data){
-            table_options.url="/getSysmi?"+$("#sysMiCondForm").serialize();
-            tableIns.reload(table_options);
         });
 
-        $("#sysMiBtn").click(function(){
-            var suffix = $("#suffix").val();
-            $("#sysMiForm").attr("action",suffix=="buy"?"/toBuy":"/download");
-            if(suffix.indexOf("all")!=0){
-                var checkStatus = table.checkStatus("sysMiTable");
-                    if( checkStatus.data.length <![CDATA['<']]>1 ){
-                    layer.msg("至少选择一行", {icon:5,anim:6});
-                    return false;
+        //监听提交----搜索
+        form.on('submit(search)', function (data) {
+            layer.msg(JSON.stringify(data.field));
+            $.ajax({
+                type: 'POST',
+                url: /*[[@{/product/list}]]*/'',
+                dataType: 'json',
+                data: data.field,
+                async: true,
+                success: function (result) {
+                    console.log(result.code)
+                    if (result.code == 0) {
+                        layer.msg('success:保存成功', {icon: 1, time: 1000});
+                        setTimeout(function () {
+                            parent.location.href = "/product/show";
+                        }, 1000);
+                    } else {
+                        console.alert(result.code);
+                        layer.msg('eles:保存失败！' + result.msg, {icon: 2, time: 1000});
+                        layer.close(index);
+                    }
+                },
+                error: function (result, type) {
+                    layer.msg('error:保存失败！', {icon: 2, time: 1000});
                 }
-                var ids="";
-                $.each(checkStatus.data, function(idx, obj) {
-                    ids+=obj.id+",";
-                });
-                $("#ids").val(ids);//使用隐藏域
-            }
-            $("#sysMiForm").submit();
+            });
+            console.log(data.field)
+            return false;
         });
     });
+
+
 </script>
 
 </html>
